refactor: nettoyage complet du projet CyberSensei (7 phases)
- Securite: Spring profiles (dev bypass / prod JWT), SecurityConfig conditionnel, JwtAuthenticationFilter restaure
- Packages Java: unification de com.cybersensei.backend dans io.cybersensei (~60 fichiers migres)
- Qualite code: GlobalExceptionHandler, exceptions typees, RestClient remplace WebFlux, Bucket4j rate limiting, validation DTOs
- Nettoyage racine: suppression Makefile, cybersensei.ps1, .env.secrets, docs redondants
- CI/CD: suppression workflows doublons (ci.yml, ci-fixed.yml, docker-build.yml)
- Terraform: suppression secrets par defaut, validation mots de passe, ports alignes
- Website: re-activation ESLint/TypeScript, toast delay corrige, import inutilise supprime

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>